--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "postcss": "^8.4.47",
     "register-service-worker": "^1.7.2",
     "uuid": "^10.0.0",
@@ -48,7 +50,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^27.0.0",
     "babel-jest": "^27.5.1",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "cypress": "^13.15.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.7.1",
