--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,23 @@ pnpm-debug.log*
 *.sln
 *.sw?
 .env
+
+# Игнорирование всех ненужных файлов
+*.pdf
+*.pages
+*.png
+*.jpg
+*.jpeg
+*.webp
+*.key
+*.dmg
+
+# Игнорирование системных файлов и директорий
+.DS_Store
+/.vscode/
+/.idea/
+/node_modules/
+/android/
+/.cache/
+/Library/
+/.local/
